[package]
name = "worm-postgres"
version = "0.1.0"
authors = ["Timothy Flowers <t_chuck_flowers@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "^0.18.1"

[dependencies.worm]
path = "../worm"
features = [
    "sql-value-bool",
    "sql-value-f32",
    "sql-value-f64",
    "sql-value-string",
    "sql-value-i8",
    "sql-value-i16",
    "sql-value-i32",
    "sql-value-i64",
    "sql-value-u32",
]
